<resources>
    <string name="app_name">Portofolio</string>
    <string name="img_bck">Portofolio</string>
    <string name="content">Portofolio Android</string>
    <array name="teams">
        <item>teman</item>
        <item>biasa saja</item>
        <item>bagaimana ya?</item>
        <item>no comment</item>
    </array>
    <string name="name">Athallah Rizaldi</string>
    <string name="keterangan1">Project satu : pembuatan Desain Multi Window dan passing data antar activity</string>
    <string name="keterangan2">Project Dua: pembuatan Desain dan Pengkodean Alur Program dalam sebuah Aplikasi Mobile</string>
    <string name="keterangan3">Project Tiga:  Pembuatan aplikasi dengan menerapkan teknik pengolahan input user</string>
    <string name="keterangan4">Project Empat: Pembuatan aplikasi mobile dengan teknik desain aplikasi lanjutan</string>
    <string name="keterangan5">Project Lima: Pembuatan aplikasi mobile dengan menerapkan basis data SQLITE</string>
    <string name="keterangan6">Project Dua Sisipan: Aplikasi MyCalculator</string>
    <string name="keterangan7">Project Enam : Pembuatan aplikasi mobile dengan menerapkan API Web MySQL</string>
    <string name="pelajaran">Target Project untuk semester ini:</string>
    <string name="desk">"Peserta Didik di SMKN 24 Jakarta Kelas XII-RPL 1 No.Absen 9, berikut link sosial media saya : "</string>
    <string name="bridge">Beberapa Project yang saya buat adalah : </string>
    <string name="footnote">"Pemrograman Perangkat Bergerak - Semester Ganjil - SMK N 24 Jakarta @2020 "</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="exit">Exit</string>
    <string name="text">Text</string>
    <string name="kembali">Kembali</string>
    <string name="pro1">Project Pertama Saya</string>
    <string name="pro2">Project kedua saya</string>
    <string name="pro3">Project ketiga saya</string>
    <string name="pro4">Project keempat saya</string>
    <string name="pro5">Project kelima saya</string>
    <string name="pro6">Project kedua sisipan saya</string>
    <string name="abo1">WhatsApp saya :</string>
    <string name="wa">085691645955</string>
    <string name="abo2">Instagram saya :</string>
    <string name="ig">\@anx.56</string>
    <string name="abo3">Twitter saya :</string>
    <string name="tw">\@TW_ANX56</string>
    <string name="abo4">Sub Reddit saya</string>
    <string name="rd">u/ANX56</string>
    <string name="abo5">"Website Tutorial : "</string>
    <string name="w3">https://www.w3schools.com</string>
    <string name="welcome_messages">Welcome, %1$s! </string>
    <string name="welcome_messages2">anda masuk dengan password %1$s.</string>
    <string name="logout">LogOut</string>
    <string name="nol">0</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="tiga">3</string>
    <string name="empat">4</string>
    <string name="lima">5</string>
    <string name="enam">6</string>
    <string name="tujuh">7</string>
    <string name="delapan">8</string>
    <string name="sembilan">9</string>
    <string name="c">C</string>
    <string name="samadengan">=</string>
    <string name="tambah">+</string>
    <string name="kurang">-</string>
    <string name="kali">*</string>
    <string name="bagi">/</string>
    <string name="back">Kembali</string>
    <string name="write">Write about your Friends</string>
    <string name="nama">Nama</string>
    <string name="jenis">Jenis Kelamin</string>
    <string name="status">Status Teman</string>
    <string name="tgl">Tanggal Lahir</string>
    <string name="something">Write Something</string>
    <string name="project31">Teknik Pengolahan Input User -</string>
    <string name="project32">Pemrograman Perangkat Bergerak -</string>
    <string name="project33">SMKN 24 Jakarta - 2020</string>
    <string name="save">SAVE</string>
    <string name="clear">CLEAR</string>
    <string name="laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="ada">Ada</string>
    <string name="tmnSklh">Teman Sekolah</string>
    <string name="tmnRmh">Temen Rumah</string>
    <string name="change">Change</string>
    <string name="pick">Pick</string>
    <string name="readwrite">Test Read and Write</string>
    <string name="load">LOAD</string>
    <string name="beta">BETA</string>
    <string name="background">Background</string>
    <string name="biodata">Biodata</string>
    <string name="email">E-Mail</string>
    <string name="nohp">Nomor HP</string>
    <string name="add">ADD</string>
    <string name="friends_list">Friends List</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="Pictures">Pictures</string>
</resources>